# Lumina

./: .gitignore  MIGRATION_CHECKLIST.md  README.md  design_guidelines.json  supabase_schema.sql
.agent/workflows/: start.md
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/steering/: documentation-policy.md
backend/: .dockerignore  .env  .env.example  Dockerfile  config.py  main.py  observability.py  pyproject.toml  requirements.txt  server.py
backend/middleware/: auth.py  logging_middleware.py  rate_limit.py
backend/models/: schemas.py
backend/routes/: astrology.py  briefing.py  chat.py  health.py  journal.py  users.py
backend/services/: ai_service.py  astrology_engine.py  database.py
docs/db/: supabase_schema.sql
docs/legacy/: QUICK_START.md  SETUP.md  STATUS.md  lumina_documentation.md
docs/migration/: SUPABASE_MIGRATION.md
frontend/: .env  .env.example  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  login.tsx  onboarding.tsx  settings.tsx
frontend/app/(tabs)/: _layout.tsx  ask.tsx  chart.tsx  index.tsx  journal.tsx
frontend/components/ui/: AudioRecorder.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  SkeletonLoader.tsx
frontend/components/ui/Layout/: GlassView.tsx  GradientBackground.tsx
frontend/constants/: theme.ts  zodiac.ts
frontend/services/: api.ts  audioService.ts  supabase.ts
frontend/stores/: chatStore.ts  journalStore.ts  userStore.ts
frontend/types/: index.ts
tests/: conftest.py  test_api_routes.py  test_astrology_engine.py  test_models.py
